[package]
name = "v2parser"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.4.6", features = ["derive"] }
dialoguer = "0.12.0"
http = "1.3.1"
querystring = "1.1.0"
regex = "1.9.6"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
urlencoding = "2"
